2011-06-12    <green@moxielogic.com>

	* build.xml: Build newlib and libgloss at the same time.

2011-06-08  Anthony Green  <green@moxielogic.com>

	* build.xml: Disable libquadmath support for all GCC builds.
	Don't build g++ support for RTEMS GCC.

2010-10-02  Anthony Green  <green@moxielogic.com>

	* build.xml: Disable RTEMS test program builds, enable
	moxie-rtems-g++ and fix RTEMS installation.
	Don't build moxie-rtems-run or moxie-uclinux-run.

2010-09-08  Anthony Green  <green@moxielogic.com>

	* moxie/rtl/verilog/cpu_print.v: Copy from cpu_decode.v so we can
	write a real decoder.

2010-09-07  Anthony Green  <green@moxielogic.com>

	* moxie/rtl/verilog/cpu_ififo.v: Bug fixes.
	* moxie/rtl/verilog/cpu_fetch.v: Bug fixes.
	* moxie/rtl/verilog/cpu_decode.v: Bug fixes.

2010-09-04  Anthony Green  <green@moxielogic.com>

	* moxie/rtl/verilog/Makefile, moxie/rtl/verilog/cpu_decode.v,
	moxie/rtl/verilog/cpu_fetch.v, moxie/rtl/verilog/cpu_ififo.v,
	moxie/rtl/verilog/muskoka.v, moxie/rtl/verilog/testm.v: New files.

	* build.xml: Build rtems.

2010-07-30  Anthony Green  <green@moxielogic.com>

	* scripts/precheck/git-submodule-recursive-update: New file.
	* scripts/precheck/check-submodules: Use
	git-submodule-recursive-update.

	* scripts/moxie-rtems-gcc-wrapper: New file.
	* build.xml: Build moxie-rtems toolchain.

2010-03-15  Anthony Green  <green@moxielogic.com>

	* build.xml: rename gcccheck and gdbcheck to check.gcc and
	check.gdb.  Make them depend on new config.dejagnu task.
	Remove post-results task.
	Add check.binutils and check.
	* scripts/dejagnu/site.exp.in: Copy from site.exp.  Use
	@DEJAGNUDIR@, which is set by config.dejagnu.
	* scripts/dejagnu/site.exp: Delete.
	* .gitignore: Ignore site.exp.

2010-03-12  Anthony Green  <green@moxielogic.com>

	* .gitmodules: Use read-only submodules for anonymous checkouts.

2010-02-25  Anthony Green  <green@moxielogic.com>

	* build.xml: Create root/usr/bin prior to running build system
	sanity checks.
