@@ -2,43 +2,43 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(elf2flt.c)
 
 AC_ARG_WITH(zlib-prefix,
-	[ --with-zlib-prefix=<dir>  path to installed zlib ],
+	AS_HELP_STRING([--with-zlib-prefix=<dir>], [path to installed zlib]),
 	[ ac_zlib_prefix=$withval ],
 	[ ac_zlib_prefix=NONE ]
 )
 
 AC_ARG_WITH(libbfd,
-	[ --with-libbfd=<file>  path to libbfd.a library to use ],
+	AS_HELP_STRING([--with-libbfd=<file>], [path to libbfd.a library to use]),
 	[ ac_libbfd=$withval ],
 	[ ac_libbfd=NONE ]
 )
 
 AC_ARG_WITH(libiberty,
-	[ --with-libiberty=<file>  path to libiberty.a library to use ],
+	AS_HELP_STRING([--with-libiberty=<file>], [path to libiberty.a library to use]),
 	[ ac_libiberty=$withval ],
 	[ ac_libiberty=NONE ]
 )
 
 AC_ARG_WITH(bfd-include-dir,
-	[ --with-bfd-include-dir=<dir>  include path for correct bfd.h ],
+	AS_HELP_STRING([--with-bfd-include-dir=<dir>], [include path for correct bfd.h]),
 	[ ac_bfd_include_dir=$withval ],
 	[ ac_bfd_include_dir=NONE ]
 )
 
 AC_ARG_WITH(binutils-include-dir,
-	[ --with-binutils-include-dir=<dir>  include path for binutils headers ],
+	AS_HELP_STRING([--with-binutils-include-dir=<dir>], [include path for binutils headers]),
 	[ ac_binutils_include_dir=$withval ],
 	[ ac_binutils_include_dir=NONE ]
 )
 
 AC_ARG_WITH(binutils-ldscript-dir,
-	[ --with-binutils-ldscript-dir=<dir>  path to install elf2flt.ld ],
+	AS_HELP_STRING([--with-binutils-ldscript-dir=<dir>], [path to install elf2flt.ld]),
 	[ ac_binutils_ldscript_dir=$withval ],
 	[ ac_binutils_ldscript_dir=NONE ]
 )
 
 AC_ARG_WITH(binutils-build-dir,
-	[ --with-binutils-build-dir=<dir>  path to compiled binutils tree ],
+	AS_HELP_STRING([--with-binutils-build-dir=<dir>], [path to compiled binutils tree]),
 	[ ac_binutils_build_dir=$withval ],
 	[ ac_binutils_build_dir=NONE ]
 )
@@ -59,14 +59,14 @@ var_yn_to_10() {
 }
 
 AC_ARG_ENABLE(got-check,
-	[ --disable-got-check - disable check for GOT (needed on H8) ],
+	AS_HELP_STRING([--disable-got-check], [disable check for GOT (needed on H8)]),
 	[ got_check=$enableval ],
 	[ got_check=yes ]
 )
 var_yn_to_10 got_check
 
 AC_ARG_ENABLE(emit-relocs,
-	[ --disable-emit-relocs - don't use the --emit-relocs (-q) linker option ],
+	AS_HELP_STRING([--disable-emit-relocs], [don't use the --emit-relocs (-q) linker option]),
 	[ emit_relocs=$enableval ],
 	[ emit_relocs=yes ]
 )
@@ -78,6 +78,18 @@ AC_ARG_ENABLE(emit-ctor-dtor,
 	[ emit_ctor_dtor=no ]
 )
 var_yn_to_10 emit_ctor_dtor
+
+AC_ARG_ENABLE(always-reloc-text,
+	AS_HELP_STRING([--enable-always-reloc-text], [always process text relocs ignoring pic/got (needed on Blackfin)]),
+	[ always_reloc_text=$enableval ],
+	[
+	case $target in
+		bfin*) always_reloc_text=yes;;
+		*)     always_reloc_text=no;;
+	esac
+	]
+)
+var_yn_to_10 always_reloc_text
 
 AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
@@ -207,6 +219,7 @@ AC_SUBST(use_ld_elf2flt_binary)
 AC_SUBST(got_check)
 AC_SUBST(emit_relocs)
 AC_SUBST(emit_ctor_dtor)
+AC_SUBST(always_reloc_text)
 AC_SUBST(SYMBOL_PREFIX)
 
 AC_OUTPUT(ld-elf2flt.sh:ld-elf2flt.in Makefile elf2flt.ld)
